docs: adjust docs